docs/hugo docs/content/v1.9.9/ethernet/connection.md
---
title: "Connection Management"
description: "Connect and configure your Ethernet interface."
weight: 5
---

Manage your Ethernet connection with configuration and status commands.

> **Tip**: The Ethernet interface can be used with the DNS sinkhole — once connected via Ethernet, `sinkhole start` will use the Ethernet IP automatically. See [DNS Sinkhole](/wifi/dns-sinkhole) for details.

## Connection Status

Check if Ethernet is connected and view link information:

```
ethup
```

Displays connection status, IP address, and link speed.

## Disconnecting

Bring down the Ethernet interface:

```
ethdown
```

## Configuration

### View Current Configuration

```
ethconfig show
```

Displays current IP settings (DHCP or static).

### DHCP Configuration

Enable DHCP to automatically obtain an IP address:

```
ethconfig dhcp
```

### Static IP Configuration

Set a static IP address:

```
ethconfig static <ip> <netmask> <gateway>
```

**Example**:
```
ethconfig static 192.168.1.100 255.255.255.0 192.168.1.1
```

## MAC Address Management

View or modify the MAC address:

```
ethmac
```

Shows current MAC address.

```
ethmac set <xx:xx:xx:xx:xx:xx>
```

Set a custom MAC address. Use with caution—changing MAC addresses may affect network access.

## System Time

### Get Current Time

```
time
```

Displays the current system time in Unix timestamp format.

### Set System Time

```
settime <unix_timestamp>
```

**Example**:
```
settime 1703001600
```

### Sync Time via NTP

Synchronize system time with an NTP server:

```
ethntp <time_server>
```

If no server is specified, uses `pool.ntp.org` by default:

```
ethntp
```

**Example with custom server**:
```
ethntp time.nist.gov
```
